# bibi-desk

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
backtest/: __init__.py  backtester.py  metrics.py  run.py
bibi/: __init__.py  config.py  data.py  desk.py  engine.py  execution.py  portfolio.py  risk.py  signal.py  sizing.py
bibi/experimental/: risk_parity.py
docs/: strategy.md
examples/: forecast_btc.py  run_desk.py
execution-engine/: Cargo.toml  README.md
execution-engine/src/: book.rs  lib.rs  main.rs  order.rs  risk.rs  router.rs  venue.rs
execution-engine/tests/: book_match.rs  risk_gate.rs
notebooks/: strategy_research.ipynb
scripts/: backtest.sh  run.sh  setup.sh
tests/: __init__.py  test_metrics.py  test_sizing.py
