[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibi-desk"
version = "0.3.0"
description = "Bibi - an AI crypto-trading desk powered by the Kronos candlestick foundation model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bibi Quant Desk" }]
keywords = ["trading", "crypto", "kronos", "quant", "kelly", "backtest"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Financial and Insurance Industry",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "ccxt>=4.2",
    "torch>=2.1",
    "huggingface_hub>=0.20",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
bibi-backtest = "backtest.run:main"

[project.urls]
Homepage = "https://github.com/wrappedbibi/bibi-desk"
Kronos = "https://github.com/shiyu-coder/Kronos"

[tool.setuptools]
packages = ["bibi", "backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
